[gd_scene load_steps=2 format=2]

[ext_resource path="res://CM/UI/Menu.gd" type="Script" id=1]

[node name="Menu" type="PanelContainer"]
anchor_right = 1.014
anchor_bottom = 1.0
margin_right = -14.3361
script = ExtResource( 1 )

[node name="ScrollContainer" type="ScrollContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 1031.0
margin_bottom = 593.0
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
margin_right = 1024.0
margin_bottom = 248.0
rect_min_size = Vector2( 1024, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainLabel" type="Label" parent="ScrollContainer/VBoxContainer"]
margin_right = 1024.0
margin_bottom = 24.0
text = "Content Manager"
align = 1

[node name="MarginContainer" type="MarginContainer" parent="ScrollContainer/VBoxContainer"]
margin_top = 28.0
margin_right = 1024.0
margin_bottom = 46.0
rect_min_size = Vector2( 0, 18 )

[node name="ModelListLabel" type="Label" parent="ScrollContainer/VBoxContainer"]
margin_top = 50.0
margin_right = 1024.0
margin_bottom = 74.0
text = "Existing Content types"

[node name="GroupFilter" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
margin_top = 78.0
margin_right = 1024.0
margin_bottom = 108.0

[node name="GroupFilterLabel" type="Label" parent="ScrollContainer/VBoxContainer/GroupFilter"]
margin_top = 3.0
margin_right = 95.0
margin_bottom = 27.0
text = "Group Filter"

[node name="AllGroups" type="Button" parent="ScrollContainer/VBoxContainer/GroupFilter"]
margin_left = 99.0
margin_right = 133.0
margin_bottom = 30.0
text = "All"

[node name="Ungrouped" type="Button" parent="ScrollContainer/VBoxContainer/GroupFilter"]
margin_left = 137.0
margin_right = 244.0
margin_bottom = 30.0
text = "Ungrouped"

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/GroupFilter"]
margin_left = 248.0
margin_top = 3.0
margin_right = 313.0
margin_bottom = 27.0
text = "Groups:"

[node name="GroupScrollContainer" type="ScrollContainer" parent="ScrollContainer/VBoxContainer/GroupFilter"]
margin_left = 317.0
margin_right = 817.0
margin_bottom = 30.0
rect_min_size = Vector2( 500, 0 )
scroll_vertical_enabled = false

[node name="Groups" type="HBoxContainer" parent="ScrollContainer/VBoxContainer/GroupFilter/GroupScrollContainer"]

[node name="AddGroup" type="Button" parent="ScrollContainer/VBoxContainer/GroupFilter"]
margin_left = 821.0
margin_right = 840.0
margin_bottom = 30.0
hint_tooltip = "Add a new group."
text = "+"

[node name="ModelList" type="VBoxContainer" parent="ScrollContainer/VBoxContainer"]
margin_top = 112.0
margin_right = 1024.0
margin_bottom = 112.0

[node name="AddButton" type="Button" parent="ScrollContainer/VBoxContainer"]
margin_top = 116.0
margin_right = 1024.0
margin_bottom = 146.0
text = "Add"

[node name="TextureButton" type="TextureButton" parent="ScrollContainer/VBoxContainer"]
visible = false
margin_top = 110.0
margin_right = 1024.0
margin_bottom = 110.0
stretch_mode = 3

[node name="CenterContainer" type="CenterContainer" parent="ScrollContainer/VBoxContainer"]
visible = false
margin_top = 110.0
margin_right = 1024.0
margin_bottom = 110.0

[node name="TextureButton2" type="TextureButton" parent="ScrollContainer/VBoxContainer/CenterContainer"]
margin_left = 512.0
margin_right = 512.0
stretch_mode = 3

[node name="ReGeneateButton" type="Button" parent="ScrollContainer/VBoxContainer"]
margin_top = 150.0
margin_right = 1024.0
margin_bottom = 180.0
text = "ReGeneate Models"

[node name="LocalizationButton" type="Button" parent="ScrollContainer/VBoxContainer"]
margin_top = 184.0
margin_right = 1024.0
margin_bottom = 214.0
text = "Localization"

[node name="QuitButton" type="Button" parent="ScrollContainer/VBoxContainer"]
margin_top = 218.0
margin_right = 1024.0
margin_bottom = 248.0
text = "Quit"

[node name="DestructionDialog" type="ConfirmationDialog" parent="."]
margin_left = 6.0
margin_top = 6.0
margin_right = 1030.0
margin_bottom = 594.0
rect_min_size = Vector2( 150, 52.5 )
window_title = "Potvrďte prosím..."
dialog_text = "Are you sure you want to destroy the {content_type} scripts and data? This is a destructive operation."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FeatureMissingDialog" type="AcceptDialog" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 1359.0
margin_bottom = 761.0
window_title = "Pozor!"
dialog_text = "Feature not implemented yet!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewGroupDialogue" type="AcceptDialog" parent="."]
margin_left = 6.0
margin_top = 6.0
margin_right = 1030.0
margin_bottom = 594.0
window_title = "Pozor!"

[node name="NGContainer" type="CenterContainer" parent="NewGroupDialogue"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -46.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NGContent" type="VBoxContainer" parent="NewGroupDialogue/NGContainer"]
margin_left = 386.0
margin_top = 236.0
margin_right = 621.0
margin_bottom = 298.0

[node name="NewGroupInstruction" type="Label" parent="NewGroupDialogue/NGContainer/NGContent"]
margin_right = 182.0
margin_bottom = 14.0
text = "Write in a new group's name"

[node name="NewGroupName" type="LineEdit" parent="NewGroupDialogue/NGContainer/NGContent"]
margin_top = 18.0
margin_right = 182.0
margin_bottom = 42.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="ScrollContainer/VBoxContainer/GroupFilter/AllGroups" to="." method="_on_AllGroups_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/GroupFilter/Ungrouped" to="." method="_on_Ungrouped_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/GroupFilter/AddGroup" to="." method="_on_AddGroup_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/AddButton" to="." method="_on_AddButton_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/ReGeneateButton" to="." method="_on_ReGeneateButton_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/LocalizationButton" to="." method="_on_LocalizationButton_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="confirmed" from="DestructionDialog" to="." method="_on_DestructionDialog_confirmed"]
[connection signal="confirmed" from="NewGroupDialogue" to="." method="_on_NewGroupDialogue_confirmed"]
